--- a/gas/doc/c-riscv.texi
+++ b/gas/doc/c-riscv.texi
@@ -763,6 +763,11 @@ It is documented in @url{https://docs.openhwgroup.org/projects/cv32e40p-user-man
 @item Xcvmem
 The Xcvmem extension provides instructions for post inc load/store operations.
 
+@item Xcvhwlp
+The Xcvhwlp extension provides instructions for hardware loop operations.
+
+It is documented in @url{https://docs.openhwgroup.org/projects/cv32e40p-user-manual/en/latest/instruction_set_extensions.html}
+
 It is documented in @url{https://docs.openhwgroup.org/projects/cv32e40p-user-manual/en/latest/instruction_set_extensions.html}
 
 @item XTheadBa
