Bit Manipulation Instructions in GNU Assembler
	Bit manipulation instructions are useful to work on single
	bits or groups of bits within a word. The cv.bitrev instruction
	from a bit manipulation perspective without describing it’s
	application as part of an FFT. The bit reverse instruction
	will reverse bits in groupings of 1, 2 or 3 bits.

	bfd/
            * elfxx-riscv.c: Added INSN_CLASS_COREV_BITMANIP.
	gas/config/
            * tc-riscv.c: Added b6 for ENCODE_CV_BITMANIP_UIMM5
              for unsigned 5-bit immediate and b7 for
              ENCODE_CV_BITMANIP_UIMM2 for unsigned 2-bit immediate.
	gas/doc/
            * c-riscv.texi: Updated documentation to include
              COREV bit manipulation version 1 and 2.
	include/opcode/
            * riscv-opc.h: Added corresponding 16 MATCH and MASK
              macros for bit manipulation.
            * riscv.h: Added EXTRACT_CV_BITMANIP_UIMM5
              EXTRACT_CV_BITMANIP_UIMM2, ENCODE_CV_BITMANIP_UIMM5,
              ENCODE_CV_BITMANIP_UIMM2.
	opcodes/
            * riscv-dis.c: Added disassemble information for
              EXTRACT_CV_BITMANIP_UIMM5 and EXTRACT_CV_BITMANIP_UIMM2.
            * riscv-opc.c: Added 16 instructions to riscv_opcode[].

Signed-off-by: NandniJamnadas <nandni.jamnadas@embecosm.com>

--- a/gas/doc/c-riscv.texi
+++ b/gas/doc/c-riscv.texi
@@ -779,6 +779,11 @@ The Xcvsimd extension provides instructions for SIMD operations.
 
 It is documented in @url{https://docs.openhwgroup.org/projects/cv32e40p-user-manual/en/latest/instruction_set_extensions.html}
 
+@item Xcvbitmanip
+The Xcvbitmanip extension provides instructions for bitmanip operations.
+
+It is documented in @url{https://docs.openhwgroup.org/projects/cv32e40p-user-manual/en/latest/instruction_set_extensions.html}
+
 @item XTheadBa
 The XTheadBa extension provides instructions for address calculations.
 
